--- a/parameters_scoping_10_21_22.ipynb
+++ b/parameters_scoping_10_21_22.ipynb
@@ -5,7 +5,7 @@
    "id": "a477578c-8b7c-4e46-b3d8-c1e1b951d57b",
    "metadata": {},
    "source": [
-    "How function works"
+    "### How function works"
    ]
   },
   {
